# micelio

./: .clang-format  .gitignore  Cargo.toml  README.md  makefile
data/simulation/: bikes-10-case1.ttl  bikes-model.ttl  trash-10-case1.ttl  trash-20-case1.ttl  trash-25-case1.ttl  trash-40-case1.ttl  trash-60-case1.ttl  trash-model.ttl
data/trash/: 10.ttl  20.ttl  40.ttl  60.ttl
micelio/: Cargo.toml
micelio-derive/: Cargo.toml
micelio-derive/src/: from_rdf.rs  lib.rs  ml_catalog.rs  namespaced.rs
micelio-ns3/: Cargo.toml  build.rs
micelio-ns3/src/: cloud.rs  dto.rs  edge.rs  fog.rs  lib.rs  params.rs  user.rs
micelio-rdf/: Cargo.toml
micelio-rdf/src/: decode.rs  encode.rs  error.rs  lib.rs  prefix.rs  serde.rs
micelio/src/: dto.rs  error.rs  lib.rs  vocab.rs
micelio/src/cloud/: broker.rs  coordinator.rs  mod.rs
micelio/src/coap/: mod.rs  push.rs  server.rs
micelio/src/edge/: client.rs  fl_client.rs  ml_registry.rs  mod.rs
micelio/src/fl/: context.rs  event.rs  fl_algorithm.rs  ml_algorithm.rs  mod.rs  nodemap.rs  task.rs  utils.rs
micelio/src/fog/: aggregator.rs  broker.rs  mod.rs
micelio/src/kdb/: global.rs  jena.rs  local.rs  mod.rs
micelio/tests/: derive.rs
nsrs/: Cargo.toml  build.rs
nsrs/include/: runtime.h
nsrs/src/: lib.rs  net.rs  runtime.cc  runtime.rs  sync.rs  time.rs
ontology/: learning.ttl  model.ttl  node.ttl  unit.ttl
scripts/: metrics.py  plot.py  prepare-data.py
simulation/: CMakeLists.txt  RTWaxman.conf  TD_ASBarabasi_RTWaxman.conf  simulation_brite.cc
simulation/helper/: brite-topology-helper.cc  brite-topology-helper.h
simulation/model/: cloud.cc  cloud.h  edge.cc  edge.h  fog.cc  fog.h  user.cc  user.h
