[package]
name    = "micelio-ns3"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait    = "0.1.89"
ciborium       = "0.2.2"
coap-lite      = "0.13.3"
cxx            = "1.0"
futures        = "0.3.31"
micelio        = { path = "../micelio", features = ["simulation", "tch"] }
micelio-derive = { path = "../micelio-derive" }
micelio-rdf    = { path = "../micelio-rdf", features = ["serde"] }
nsrs           = { path = "../nsrs" }
oxiri          = { version = "0.2.11", features = ["serde"] }
oxrdf          = "0.3.1"
oxttl          = "0.2.1"
rand           = "0.9.2"
regex          = "1.12.2"
serde          = "1.0.228"
serde_json     = "1.0.145"
tch            = "0.23.0"
testcontainers = { version = "0.26.3", features = ["blocking"] }
uuid           = { version = "1.19.0", features = ["v4"] }
walkdir        = "2.5.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
name       = "micelio"
path       = "src/lib.rs"
crate-type = ["staticlib"]
